# relay

./: .gitignore  APP_ID  CLAUDE.md  CODEOWNERS  Cargo.toml  LICENSE  README.md  TESTING.md  build.rs  design-doc.md
.github/: pull_request_template.md
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-05-26-status-dashboard-onboarding.md
docs/superpowers/specs/: 2026-05-26-app-bundle-design.md  2026-05-26-status-dashboard-onboarding-design.md
helper/Sources/: main.swift
packaging/: Info.plist  make-icns.sh
prefs/: Info.plist
prefs/Sources/: ConfigStore.swift  DisplaySettingsView.swift  ErrorsView.swift  GeneralSettingsView.swift  MiscView.swift  NowPlayingView.swift  RelayPreferencesApp.swift  StorageView.swift
src/: config.rs  constants.rs  errors.rs  lib.rs  main.rs  onboarding.rs  pipeline.rs  tray.rs
src/artwork/: cache.rs  itunes.rs  mod.rs  url.rs
src/artwork/fixtures/: itunes_search.json
src/discord/: activity.rs  client.rs  mod.rs  reconnect.rs
src/media/: debounce.rs  event.rs  helper_path.rs  mod.rs  prefs_path.rs  reader.rs
src/tray/: event_loop.rs  icons.rs  mod.rs
