[package]
name = "relay"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "time", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
dirs = "6.0.0"
toml = "0.8"
tray-icon = "0.19"
winit = "0.30"
png = "0.17"
discord-rich-presence = "1.1.0"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["test-util"] }

[build-dependencies]
# none needed; build.rs uses only std
